# seedgraph

./: .gitignore  .gitignore-notes.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROMPT_ENGINEERING.md  QUICKSTART.md  README.md  SEED_BUILDER_SUMMARY.md  SLIM_OUTPUT_SUMMARY.md  SUCCESS_VERIFICATION.md  USAGE_GUIDE.md  pyproject.toml
scripts/: run_domain_experiments.py  run_two_stage_experiment.py
src/seedgraph/: __init__.py  cli.py
src/seedgraph/core/: __init__.py  brancher.py  checkpoint.py  graph_store.py  selection.py  slim_brancher.py  slim_checkpoint.py
src/seedgraph/generation/: __init__.py  passage_generator.py
src/seedgraph/llm/: __init__.py  qwen.py
src/seedgraph/seeds/: __init__.py  builder.py  diversity.py  expander.py  taxonomy.py
src/seedgraph/utils/: io.py
tests/: test_brancher.py  test_qwen.py  test_selection.py
